Bug 131210 - UI: Language Options: editing 'Date acceptance patterns' crashes whole application (gtk3)
Summary: UI: Language Options: editing 'Date acceptance patterns' crashes whole applic...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.1.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.0.0 target:6.4.2
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-07 17:39 UTC by info@kgsw.de
Modified: 2020-03-11 16:04 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
UI hangs after typing y and showing "red/stop (-)" (206.30 KB, image/png)
2020-03-07 17:41 UTC, info@kgsw.de
Details
self shutdown (w/all application Calc's windows) after 50~110sec (118.52 KB, image/png)
2020-03-07 17:43 UTC, info@kgsw.de
Details
happens even in safe mode (247.11 KB, image/png)
2020-03-07 17:43 UTC, info@kgsw.de
Details

Note You need to log in before you can comment on or make changes to this bug.
Description info@kgsw.de 2020-03-07 17:39:43 UTC
Description:
Calc: Tools > Options > Language Settings > Languages
changing 'Date acceptance patterns' by typing a y (year) hangs further keyboard input and crashes application within a minute (50sec)

Steps to Reproduce:
1. Language of 
- user interface: is set to English (USA)
- locale setting: changed from EN to German
- default currency: automatically becomes 'default EUR'
- date acceptance pattern: becomes: 'D.M.Y;D.M' (for day.month.year)
2. deleting 'D.M.' part of the pattern
3. typing a y for year shows "error/stop" Symbol 
an no further keyboard input possible
4. resetting the user profile and application (to factory settings, both ui and user) in/and using safe mode
but self-shutdown after reset to factory settings now last longer up to 90~110sec after hanging
btw: the application did never "restart" by itself, but i had always to run it once again time

Actual Results:
can move Options-window by mouse, but no keys are accpeted
system load increases significantly (notebook fan) for about 50sec
than all application windows disappear 


Expected Results:
should not crash, should be able to continue typing, changing pattern


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
for whole dialog setting (if that's a reason), pls see screenshots

openGL says: $ glxinfo | grep OpenGL
OpenGL vendor string: Intel Open Source Technology Center
OpenGL renderer string: Mesa DRI Intel(R) Sandybridge Mobile 
OpenGL core profile version string: 3.3 (Core Profile) Mesa 19.2.8
OpenGL core profile shading language version string: 3.30
OpenGL core profile context flags: (none)
OpenGL core profile profile mask: core profile
OpenGL core profile extensions:
OpenGL version string: 3.0 Mesa 19.2.8
OpenGL shading language version string: 1.30
OpenGL context flags: (none)
OpenGL extensions:
OpenGL ES profile version string: OpenGL ES 3.0 Mesa 19.2.8
OpenGL ES profile shading language version string: OpenGL ES GLSL ES 3.00
OpenGL ES profile extensions:
Comment 1 info@kgsw.de 2020-03-07 17:41:45 UTC
Created attachment 158472 [details]
UI hangs after typing y and showing "red/stop (-)"
Comment 2 info@kgsw.de 2020-03-07 17:43:13 UTC
Created attachment 158473 [details]
self shutdown (w/all application Calc's windows) after 50~110sec
Comment 3 info@kgsw.de 2020-03-07 17:43:59 UTC
Created attachment 158474 [details]
happens even in safe mode
Comment 4 info@kgsw.de 2020-03-07 17:56:09 UTC
a few hours and combinations later:
if I do [Apply] every single change of the other settings
I'm able to type a y and delete it or add further letters
to form a reasonable/accepted pattern (here: Y-M-D)

but after [OK] I will see a new Dialog, which I cannot relate to my input:
"Because the current formula separator settings conflict with the
locale, the formula separators have been reset to their default values."
Comment 5 Julien Nabet 2020-03-07 23:14:32 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Notice: I can reproduce this with gtk3 rendering, not with gen or kf5 rendering.
Comment 6 Julien Nabet 2020-03-07 23:28:20 UTC
Patch submitted on gerrit here:
https://gerrit.libreoffice.org/c/core/+/90180
Comment 7 Julien Nabet 2020-03-08 12:33:29 UTC
info@kgsw.de: as a workaround for the moment, you can try this:
export SAL_USE_VCLPLUGIN=gen;soffice
Comment 8 Commit Notification 2020-03-08 14:16:16 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3ddfba19c964a65a5bfa1c172e83532af305c985

tdf#131210: avoid infinite loop in 'Date acceptance patterns'

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Julien Nabet 2020-03-08 14:48:17 UTC
Backport on 6.4 waiting for review here:
https://gerrit.libreoffice.org/c/core/+/90180
Comment 10 Commit Notification 2020-03-08 16:09:34 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/58bbb4dc19f939e1173b9c7ed93878a006311c4d

tdf#131210: avoid infinite loop in 'Date acceptance patterns'

It will be available in 6.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2020-03-11 15:48:48 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-6-4-2":

https://git.libreoffice.org/core/commit/28ab1789df6ba73e8d18b6bd9c8bb0c49a7ae301

tdf#131210: avoid infinite loop in 'Date acceptance patterns'

It will be available in 6.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.