tdf#131210: avoid infinite loop in 'Date acceptance patterns'

Change-Id: Ib049b5d44f91e2b36c068e1ef351ae81707d885e